--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "goit-js-hw-10",
+  "name": "test--2-",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-10/",
+    "build": "vite build --base=/test--2-/",
     "preview": "vite preview"
   },
   "devDependencies": {
